@@ -1,3 +1,6 @@
+2009-06-26  H. İbrahim Güngör  <h.ibrahim.gungor@gmail.com>
+	* bin/network.py: Show connection states
+
 2009-06-10  Bahadır Kandemir <bahadir@pardus.org.tr>
 	* bin/mudur.py: Clear previous connection states
 
